unpackaged/main/default/objects/Lead/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <label>AccountID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>