unpackaged/main/default/objects/Lead/fields/Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Days__c</fullName>
    <formula>TODAY () - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>