unpackaged/main/default/objects/Lead/fields/Bad_Address__c.field-meta.xml
<CustomField>
    <fullName>Bad_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad Address?</label>
    <type>Checkbox</type>
</CustomField>