unpackaged/main/default/objects/Lead/fields/Bad_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Bad_Phone_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad Phone Number</label>
    <type>Checkbox</type>
</CustomField>