unpackaged/main/default/objects/Lead/fields/Behavior_Score__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Score__c</fullName>
    <label>Behavior Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>