unpackaged/main/default/objects/Lead/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>