unpackaged/main/default/objects/Lead/fields/CMS_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>CMS_Last_Login__c</fullName>
    <description>This field shows the most recent date and time when the lead logged into their CMS user account.</description>
    <label>CMS Last Login</label>
    <type>DateTime</type>
</CustomField>