unpackaged/main/default/objects/Lead/fields/Count_No_Email__c.field-meta.xml
<CustomField>
    <fullName>Count_No_Email__c</fullName>
    <description>Leads with no email</description>
    <formula>IF(ISBLANK(Email),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Counts how many leads have no email</inlineHelpText>
    <label>Count of No Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>