unpackaged/main/default/objects/Lead/fields/Count_of_No_Phone__c.field-meta.xml
<CustomField>
    <fullName>Count_of_No_Phone__c</fullName>
    <description>Count of Leads w/out Phone</description>
    <formula>ISBLANK(Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of Leads w/out Phone</inlineHelpText>
    <label>Count of No Phone</label>
    <type>Checkbox</type>
</CustomField>