unpackaged/main/default/objects/Lead/fields/Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Score__c</fullName>
    <description>Score assigned in Marketo to reflect a lead's demographic value.</description>
    <label>Demographic Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>