unpackaged/main/default/objects/Lead/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Lead has asked not to be called again.</description>
    <inlineHelpText>This Lead has asked not to be called again.</inlineHelpText>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>