unpackaged/main/default/objects/Lead/fields/eNews_Announcements__c.field-meta.xml
<CustomField>
    <fullName>eNews_Announcements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New research and resources including upcoming webcasts, CPE/CLE opportunities, and more.</description>
    <label>eNews Announcements</label>
    <type>Checkbox</type>
</CustomField>