unpackaged/main/default/objects/Lead/fields/eNews_Compliance_Week__c.field-meta.xml
<CustomField>
    <fullName>eNews_Compliance_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keep tabs on the compliance, risk, and ethics content that matters most to you</description>
    <label>eNews Weekly Digest</label>
    <type>Checkbox</type>
</CustomField>