unpackaged/main/default/objects/Lead/fields/eNews_Events__c.field-meta.xml
<CustomField>
    <fullName>eNews_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Get notified about call for speakers, registration, agenda updates, and keynote speakers at our premier compliance events.</description>
    <label>eNews Events</label>
    <type>Checkbox</type>
</CustomField>