unpackaged/main/default/objects/Lead/fields/eNews_News__c.field-meta.xml
<CustomField>
    <fullName>eNews_News__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Replacement e-newsletter that consolidates Tuesday Edition, Weekend Digest, Washington Watch and Europe Digest.</description>
    <label>eNews News</label>
    <type>Checkbox</type>
</CustomField>