unpackaged/main/default/objects/Lead/fields/eNews_Special_Offers__c.field-meta.xml
<CustomField>
    <fullName>eNews_Special_Offers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Never miss out again—we’ll deliver discounts to events, promotions for new subscribers, and must-have reports right to your inbox.</description>
    <label>eNews Special Offers</label>
    <type>Checkbox</type>
</CustomField>