unpackaged/main/default/objects/Lead/fields/eNews_Thought_Leadership__c.field-meta.xml
<CustomField>
    <fullName>eNews_Thought_Leadership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Featured white papers, e-books, and events brought to you by partner companies.</description>
    <label>eNews Thought Leadership</label>
    <type>Checkbox</type>
</CustomField>