unpackaged/main/default/objects/Lead/fields/Engagement_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Priority_Score__c</fullName>
    <formula>Behavior_Score__c  +  Demographic_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>