unpackaged/main/default/objects/Lead/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Trial subscription Expiration date. User will be granted access upon conversion of this Lead.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>