unpackaged/main/default/objects/Lead/fields/Interested_Colleagues__c.field-meta.xml
<CustomField>
    <fullName>Interested_Colleagues__c</fullName>
    <inlineHelpText>Are there other colleagues/team members that would be interested in a CW subscription?</inlineHelpText>
    <label>Interested Colleagues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes 2-5 team members</fullName>
            </value>
            <value>
                <fullName>Yes 6-10 team members</fullName>
            </value>
            <value>
                <fullName>Yes 11-20 team members</fullName>
            </value>
            <value>
                <fullName>Yes 20+ team members</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>