unpackaged/main/default/objects/Lead/fields/Interested_in_learning_during_trial__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_learning_during_trial__c</fullName>
    <inlineHelpText>What are you most interested in during the trial?</inlineHelpText>
    <label>CW Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webcasts</fullName>
            </value>
            <value>
                <fullName>Articles</fullName>
            </value>
            <value>
                <fullName>Thought Leadership</fullName>
            </value>
            <value>
                <fullName>CW Conferences</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>