unpackaged/main/default/objects/Lead/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Board Member, CEO or President</fullName>
            </value>
            <value>
                <fullName>C-Level Executive (CFO, CCO, CAO, etc.)</fullName>
            </value>
            <value>
                <fullName>Senior Management (VP, EVP, SVP, General Counsel)</fullName>
            </value>
            <value>
                <fullName>Other Management (Controller, Director-Level)</fullName>
            </value>
            <value>
                <fullName>Non-Management Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>