unpackaged/main/default/objects/Lead/fields/LeadAC__c.field-meta.xml
<CustomField>
    <fullName>LeadAC__c</fullName>
    <formula>"=1"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadAC</label>
    <type>Text</type>
</CustomField>