unpackaged/main/default/objects/Lead/fields/Leads_with_a_Blank_Field__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_a_Blank_Field__c</fullName>
    <formula>IF(
  OR(
     ISBLANK(Email),
     ISBLANK(Phone),
     ISBLANK(City),
     ISBLANK(State),
     ISBLANK(Country),
     ISBLANK(Title),
     ISBLANK(FirstName),
     ISBLANK (PostalCode),
     ISBLANK(Street)
          ),
"No", 
"Yes"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with a Blank Field</label>
    <type>Text</type>
</CustomField>