unpackaged/main/default/objects/Lead/fields/Leads_with_City__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_City__c</fullName>
    <formula>IF(ISBLANK(City), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with City</label>
    <type>Text</type>
</CustomField>