unpackaged/main/default/objects/Lead/fields/Leads_with_CMS_Login__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_CMS_Login__c</fullName>
    <formula>IF(ISBLANK(CMS_Last_Login__c), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with CMS Login</label>
    <type>Text</type>
</CustomField>