unpackaged/main/default/objects/Lead/fields/Leads_with_Country__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_Country__c</fullName>
    <formula>IF(ISBLANK( Country ), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with Country</label>
    <type>Text</type>
</CustomField>