unpackaged/main/default/objects/Lead/fields/Leads_with_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_First_Name__c</fullName>
    <formula>IF(ISBLANK(FirstName), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with First Name</label>
    <type>Text</type>
</CustomField>