unpackaged/main/default/objects/Lead/fields/Leads_with_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_Lead_Source__c</fullName>
    <formula>IF(ISBLANK(TEXT(LeadSource)), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with Lead Source</label>
    <type>Text</type>
</CustomField>