unpackaged/main/default/objects/Lead/fields/Leads_with_Phone__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_Phone__c</fullName>
    <formula>IF(ISBLANK(Phone), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with Phone</label>
    <type>Text</type>
</CustomField>