unpackaged/main/default/objects/Lead/fields/Leads_with_State__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_State__c</fullName>
    <formula>IF(ISBLANK(State), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with State</label>
    <type>Text</type>
</CustomField>