unpackaged/main/default/objects/Lead/fields/Leads_with_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_Street_Address__c</fullName>
    <formula>IF(ISBLANK( Street ), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with Street Address</label>
    <type>Text</type>
</CustomField>