unpackaged/main/default/objects/Lead/fields/Leads_with_Title__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_Title__c</fullName>
    <formula>IF(ISBLANK(Title), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with Title</label>
    <type>Text</type>
</CustomField>