unpackaged/main/default/objects/Lead/fields/Leads_with_Zip__c.field-meta.xml
<CustomField>
    <fullName>Leads_with_Zip__c</fullName>
    <formula>IF(ISBLANK( PostalCode ), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with Zip</label>
    <type>Text</type>
</CustomField>