unpackaged/main/default/objects/Lead/fields/Leads_without_Email__c.field-meta.xml
<CustomField>
    <fullName>Leads_without_Email__c</fullName>
    <formula>IF(ISBLANK(Email), "No", "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads with Email</label>
    <type>Text</type>
</CustomField>