unpackaged/main/default/objects/Lead/fields/Mass_Field_Update__c.field-meta.xml
<CustomField>
    <fullName>Mass_Field_Update__c</fullName>
    <description>Field used to mass update new fields when workflows are added.</description>
    <label>Mass Field Update</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>