unpackaged/main/default/objects/Lead/fields/Multi_Account__c.field-meta.xml
<CustomField>
    <fullName>Multi_Account__c</fullName>
    <description>Is this Lead associated with a multi Account?</description>
    <inlineHelpText>Is this Lead associated with a multi Account?</inlineHelpText>
    <label>Multi Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>