unpackaged/main/default/objects/Lead/fields/MultiExpires__c.field-meta.xml
<CustomField>
    <fullName>MultiExpires__c</fullName>
    <formula>Account__r.MultiExpires__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MultiExpires</label>
    <type>Date</type>
</CustomField>