unpackaged/main/default/objects/Lead/fields/No_Trial__c.field-meta.xml
<CustomField>
    <fullName>No_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to confirm that Lead will be converted without trial access.</inlineHelpText>
    <label>No Trial</label>
    <type>Checkbox</type>
</CustomField>