unpackaged/main/default/objects/Lead/fields/Reason_Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Reason_Disqualified__c</fullName>
    <inlineHelpText>Why was this Lead disqualified?</inlineHelpText>
    <label>Reason Disqualified</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Data</fullName>
            </value>
            <value>
                <fullName>Bad Timing</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not a Valid Lead</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>