unpackaged/main/default/objects/Lead/fields/Send_Print_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Send_Print_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if trialist requested a print magazine as part of their trial subscription.</description>
    <label>Send Print Magazine</label>
    <type>Checkbox</type>
</CustomField>