unpackaged/main/default/objects/Lead/fields/Sent_to_OnBrand__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_OnBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has this Lead previously been sent to OnBrand</inlineHelpText>
    <label>Sent to OnBrand</label>
    <type>Checkbox</type>
</CustomField>