unpackaged/main/default/objects/Lead/fields/Source_Link__c.field-meta.xml
<CustomField>
    <fullName>Source_Link__c</fullName>
    <label>Source Link</label>
    <type>Url</type>
</CustomField>