unpackaged/main/default/objects/Lead/fields/Where_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_hear_about_us__c</fullName>
    <label>Where did you hear about us</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Online event</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>