unpackaged/main/default/objects/Lead/recordTypes/Advertising.recordType-meta.xml
<RecordType>
    <fullName>Advertising</fullName>
    <active>true</active>
    <businessProcess>Advertising</businessProcess>
    <label>Advertising</label>
</RecordType>