unpackaged/main/default/objects/Lead/recordTypes/Subscriptions.recordType-meta.xml
<RecordType>
    <fullName>Subscriptions</fullName>
    <active>true</active>
    <businessProcess>Subscriptions</businessProcess>
    <label>Subscriptions</label>
</RecordType>