unpackaged/main/default/objects/Lead/validationRules/Trial_expiry_date_or_specify_no_trial.validationRule-meta.xml
<ValidationRule>
    <fullName>Trial_expiry_date_or_specify_no_trial</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name  = "Subscriptions", ISBLANK(Expiration_Date__c),
No_Trial__c = FALSE,
IsConverted = TRUE
)</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>You must enter an Expiration Date, or specify that No Trial access is to be granted.</errorMessage>
</ValidationRule>