unpackaged/main/default/objects/Lead/listViews/Advertising_Lead_Queue1.listView-meta.xml
<ListView>
    <fullName>Advertising_Lead_Queue1</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Account__c</columns>
    <columns>Multi_Account__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Engagement_Priority_Score__c</columns>
    <columns>User_Type__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Advertising Lead Queue</label>
    <queue>CW_Ad_Sales_Lead_Queue</queue>
    <sharedTo>
        <group>Membership_Sales</group>
        <group>Sales_Marketing</group>
        <role>Director_of_Subscription_Sales</role>
        <role>Salesforce_Administrator</role>
    </sharedTo>
</ListView>