unpackaged/main/default/objects/Lead/listViews/AllLeads.listView-meta.xml
<ListView>
    <fullName>AllLeads</fullName>
    <booleanFilter>1 AND 2 and 3 and 4 and 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Account__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>User_Type__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Engagement_Priority_Score__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>CA,US</value>
    </filters>
    <filters>
        <field>Multi_Account__c</field>
        <operation>notEqual</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>esuch</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/1/2017 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>7/21/2017</value>
    </filters>
    <label>ES Leads - created after 6/1/17</label>
</ListView>