unpackaged/main/default/objects/Lead/listViews/August_2018_Trials.listView-meta.xml
<ListView>
    <fullName>August_2018_Trials</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Account__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Engagement_Priority_Score__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Type__c</field>
        <operation>equals</operation>
        <value>Trial</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2018</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/15/2018</value>
    </filters>
    <label>August 2018 - Trials</label>
</ListView>